[package]
name = "channel-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
bytes = "1.10.1"
flume = "0.11.0"
futures-buffered = "0.2.6"
futures-lite = "2.3.0"
futures-util = { version = "0.3.30", features = ["sink"] }
mimalloc = "0.1.48"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = "0.7.11"

[profile.release]
debug = true
