[package]
name = "channel-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.5.0"
bytes = "1.10.1"
flume = "0.11.1"
futures = "0.3.31"
mimalloc = "0.1.48"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"

[profile.release]
debug = true
